# test-sv

./: .releaserc.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
app/: main.py
src/: setup.cfg
