[metadata]
name = myapi
version = 0.1.0
description = API de ejemplo en FastAPI
author = TuNombre

[options]
packages = find:
install_requires =
    fastapi
    uvicorn

[semantic_release]
version_variable = app/__init__.py:__version__
version_source = tag
tag_format = v{version}
upload_to_pypi = false
upload_to_release = false
branch = main